--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         function IrAPokemon(id) {           //Esta función nos va a permitir, más adelante, que al hacer click en un pokemon nos lleve a su información específica, mediante el onclick
             console.log(id);
-            location.href = "http://127.0.0.1:5500/Cada_pokemon.html?id="+id;
+            location.href = "https://adriat1994.github.io/-Hazte-con-todos-/Cada_pokemon.html?id="+id;
         }
 
 
